--- a/src/App.css
+++ b/src/App.css
@@ -6,18 +6,23 @@
   flex-direction: column;
 }
 
-.Menu{
+.Menu, 
+.Quiz,
+.EndScreen {
   width: 500px;
   height: 500px;
   border-radius: 10px;
   background-color: lightseagreen;
   display: flex; 
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  color: white;
 }
 
-.Menu button{
+.Menu button, 
+.Quiz button,
+.EndScreen button {
   width: 300px;
   height: 50px;
   margin: 5px;
@@ -25,4 +30,12 @@
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
+}
+
+.options {
+  width:100%;;
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
