--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
+body {
+  margin: 0;
+  background-color: #e4e4e4;
+}
 .QuizContainer{
+  /* min-height: 700px;
+  height: 100%; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 .App {
   font-family: Arial, Helvetica, sans-serif;
@@ -11,48 +17,108 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 
 .Menu, 
 .Quiz,
 .EndScreen {
-  width: 500px;
-  height: 500px;
-  border-radius: 10px;
-  background-color: lightseagreen;
+  width: 700px;
+  max-width: 100%;
+  background-color: #e4e4e4;
   display: flex; 
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  color: white;
+  color: black;
+  padding: 10px;
 }
 
 .Menu button, 
 .Quiz button,
 .EndScreen button {
-  width: 300px;
-  height: 50px;
+  display: flex;
+  padding: 5px;
+  width: 100%;
+  height: 100%;
   margin: 5px;
-  border: none;
+  text-align: start;
+  border: solid 5px transparent;
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
+  background-color: white;
 }
 
 .Menu button:hover, 
-.Quiz button:hover,
+.Quiz .options button:hover,
 .EndScreen button:hover {
-border: solid rgb(245, 224, 42) 0.5rem;
+border: solid rgb(0, 0, 0) 5px;
 }
 
 .selectedAnswer{
-  background-color:rgb(245, 224, 42);
-  border-radius: 5px ;
+  background-color:rgb(0, 0, 0);
+  border-radius: 10px ;
+  display: flex;
+  width: 100%;
 }
+
+.nextBtn:hover{
+  border: solid 5px transparent;}
+
 .options {
-  width:100%;;
+  width:100%;
   display:flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
+#right{
+  background-color: rgb(198, 255, 92);
+}
+#wrong{ 
+  background-color: rgb(255, 153, 153);
+}
+button.nextBtn, .EndScreen button {
+  margin:30px;
+  padding:10px;
+  text-align: center;
+  justify-content: center;
+  align-self: center;
+}
+
+  #btnWrap{
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  }
+  .Menu{
+    overflow-y:scroll;
+    overflow-x: hidden;
+    max-height: 60vh;
+    border-bottom: solid #e4e4e4 5px;
+    border-top: solid #e4e4e4 5px;
+
+  }
+  .Menu::-webkit-scrollbar,
+  .Quiz::-webkit-scrollbar,
+  .EndScreen::-webkit-scrollbar{
+    width: 7px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  .Quiz h2{
+    align-self: flex-start;
+  }
