--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,6 @@ body {
   height: 100%;
   min-height: 800px;
 }
-.MenuContainer{
-  border: solid black;
-
-}
 .Menu, 
 .Quiz,
 .EndScreen {
@@ -39,8 +35,7 @@ body {
   padding: 10px;
   /* margin-top: 5px; */
   margin-bottom: 5px;
-} 
-
+}
 
 .Menu button, 
 .Quiz button,
@@ -74,7 +69,9 @@ border: solid rgb(0, 0, 0) 5px;
 }
 
 .nextBtn:hover{
-  border: solid 5px transparent;}
+  border: solid 5px transparent;
+  font-weight: bold;
+}
 
 .options {
   width:100%;
@@ -107,9 +104,7 @@ button.nextBtn, #endQuestionBtn {
     overflow-y:scroll;
     overflow-x: hidden;
     max-height: 60vh;
-    border-bottom: solid #e4e4e4 5px;
-    border-top: solid #e4e4e4 5px;
-
+    margin:0px;
   }
   .Menu::-webkit-scrollbar,
   .Quiz::-webkit-scrollbar,
@@ -137,7 +132,53 @@ button.nextBtn, #endQuestionBtn {
   .MenuContainer {
     display: flex;
     flex-direction:column;
+    border: solid black;
+    border-top: 0px;
+    border-bottom: 0px;
   }
   .questionContainer{
     margin-top: 10px;
+  }
+  .noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
+  #footer {
+    height:30px;
+    width: 100%;
+    background-color: rgb(71, 71, 71);
+    color: rgb(204, 204, 204);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    z-index: 1;
+  }
+  #footer a{
+    text-decoration: none;
+    color: rgb(0, 217, 255);
+    margin-right: 10px;
+  }
+  .title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-bottom: black solid 1px;
+    background-color: rgb(71, 71, 71);
+    box-shadow: 0px 2px 5px rgb(0, 0, 0);
+    z-index: 1;
+    color: whitesmoke;
+  }
+  @media screen and (max-width:900px){
+.Menu, 
+.Quiz,
+.EndScreen {
+  width: inherit;
+} 
   }
