--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,11 +1,13 @@
 /* Add a black background color to the top navigation */
-.topnav {
+.nav {
   background-color: #333;
   overflow: hidden;
+  font-weight: bold;
+  z-index: 1;
 }
 
 /* Style the links inside the navigation bar */
-.topnav a, .topnav li {
+.nav a, .nav li {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -15,13 +17,13 @@
 }
 
 /* Change the color of links on hover */
-.topnav a:hover, .topnav li:hover {
+.nav a:hover, .nav li:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active, .topnav li.active  {
+.nav a.active, .nav li.active  {
   background-color: #04AA6D;
   color: white;
 }
