--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -29,8 +29,7 @@
 
 /* Add a color to the active/current link */
 .nav a.active, .nav li.active  {
-  background-color: #04AA6D;
-  color: white;
+  color: #f2f2f2;
 }
 ul{
   list-style-type: none;
@@ -44,4 +43,10 @@ ul{
   max-width: 100%;
   padding: 15px;
   margin: 0;
+}
+@media screen and (max-width:410px) {
+  #root > div > div > div > div.nav > ul > a, #root > div > div > div > div.nav > ul > li{
+    font-size: 11px;
+  }
+  
 }
