--- a/src/Components/Categories/MainCat.css
+++ b/src/Components/Categories/MainCat.css
@@ -8,6 +8,7 @@ margin-bottom: 2em;
 }
 .MainCatBtn, .back{
 max-width: 400px;
+
 }
 .Test button{
     text-align: center;
@@ -22,6 +23,7 @@ max-width: 400px;
 }
 button.back{
     text-align: center;
+    margin-bottom: 40px;
 }
 .MainCat img{
     background-color: #F2F2F2;
