--- a/src/App.css
+++ b/src/App.css
@@ -236,3 +236,42 @@ text-align: center !important;}
 .Menu{
   color: #F2F2F2;
 }
+.MainCat{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2em;
+  }
+  .MainCatBtn, .back{
+  max-width: 400px;
+  
+  }
+  .Test button{
+      text-align: center;
+  }
+  .Test {
+      padding-top: 50px;
+  }
+  .Text {
+      padding: 2em;
+      padding-top: 0;
+      max-width: 900px;
+  }
+  button.back{
+      text-align: center;
+      margin-bottom: 40px;
+  }
+  .MainCat img{
+      background-color: #F2F2F2;
+      margin-bottom: 20px;
+      width: 400px;
+      max-width: 400px;
+  }
+  @media screen and (max-width:430px) {
+      #root > div > div > div > div.Menu > div > img{
+          width: 300px;
+      }
+  
+  }
